--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:preview": "vite --config vite.preview.config.js --port 5174",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
